# daisy-embassy

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: _minimum_flash.rs  _minimum_qspi.rs  _minimum_sai.rs  _usb_uac.rs  blinky.rs  flash.rs  looper.rs  oneshot_recorder.rs  passthrough.rs  sdram.rs  singleshot_loopback.rs  triangle_wave_tx.rs  usb_midi.rs  usb_serial.rs
examples/passthrough/: Cargo.toml
examples/passthrough/src/: main.rs
examples/singleshot_loopback/: Cargo.toml  memory.x
examples/singleshot_loopback/.cargo/: config.toml
src/: audio.rs  board.rs  flash.rs  led.rs  lib.rs  pins.rs  sdram.rs  usb.rs
src/codec/: mod.rs  pcm3060.rs  wm8731.rs
tests/: test.rs
