[package]
name = "daisy_embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32h750ib", "time-driver-tim2", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
cortex-m = "0.7.7"
static_cell = "2.1.0"
defmt = "0.3.8"
grounded = "0.2.0"
wm8731 = "0.1.0"
stm32-fmc = "0.3.0"

[dev-dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0", features = ["device"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-usb = "0.2.0"
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embedded-hal-async = { version = "1.0.0" }
embedded-io-async = "0.6.1"
embedded-fatfs = { version = "0.1.0", default-features = false }
sdspi = { version = "0.1.0" }
block-device-adapters = { version = "0.1.0"}
aligned = "0.4.2"

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "b88dc137e766d89eca5472bfa6f3bb78cfd1f7e0" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "b88dc137e766d89eca5472bfa6f3bb78cfd1f7e0" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "b88dc137e766d89eca5472bfa6f3bb78cfd1f7e0" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "b88dc137e766d89eca5472bfa6f3bb78cfd1f7e0" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "b88dc137e766d89eca5472bfa6f3bb78cfd1f7e0" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "b88dc137e766d89eca5472bfa6f3bb78cfd1f7e0" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "b88dc137e766d89eca5472bfa6f3bb78cfd1f7e0" }

embedded-fatfs = { git = "https://github.com/Dicklessgreat/embedded-fatfs.git", branch = "stm32h7_DMA" }
sdspi = { git = "https://github.com/Dicklessgreat/embedded-fatfs.git", branch = "stm32h7_DMA" }
block-device-adapters = { git = "https://github.com/Dicklessgreat/embedded-fatfs.git", branch = "stm32h7_DMA" }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true


[[example]]
name = "passthrough"
path = "examples/passthrough.rs"
[[example]]
name = "triangle_wave_tx"
path = "examples/triangle_wave_tx.rs"
[[example]]
name = "blinky"
path = "examples/blinky.rs"
[[example]]
name = "sdram"
path = "examples/sdram.rs"
[[example]]
name = "flash"
path = "examples/flash.rs"
[[example]]
name = "usb_serial"
path = "examples/usb_serial.rs"
[[example]]
name = "looper"
path = "examples/looper.rs"
[[example]]
name = "_minimum_sai"
path = "examples/_minimum_sai.rs"
[[example]]
name = "_minimum_flash"
path = "examples/_minimum_flash.rs"