[package]
name = "daisy_embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32h750ib", "time-driver-tim2", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
cortex-m = "0.7.7"
static_cell = "2.1.0"
defmt = "0.3.8"
grounded = "0.2.0"
wm8731 = "0.1.0"
stm32-fmc = "0.3.0"

[dev_dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0", features = ["device"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-usb = "0.2.0"
embedded-test = { version = "0.4.0", features = ["defmt", "embassy", "external-executor", "panic-handler"] }
critical-section = "1.1"
heapless = { version = "0.8", default-features = false }
micromath = "2.0.0"

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/elagil/embassy.git", rev = "ea748d5b73db5d93aeffdfcba99866b985c7ed1e" }
embassy-time = { git = "https://github.com/elagil/embassy.git", rev = "ea748d5b73db5d93aeffdfcba99866b985c7ed1e" }
embassy-sync = { git = "https://github.com/elagil/embassy.git", rev = "ea748d5b73db5d93aeffdfcba99866b985c7ed1e" }
embassy-executor = { git = "https://github.com/elagil/embassy.git", rev = "ea748d5b73db5d93aeffdfcba99866b985c7ed1e" }
embassy-futures = { git = "https://github.com/elagil/embassy.git", rev = "ea748d5b73db5d93aeffdfcba99866b985c7ed1e" }
embassy-usb = { git = "https://github.com/elagil/embassy.git", rev = "ea748d5b73db5d93aeffdfcba99866b985c7ed1e" }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true


[[example]]
name = "passthrough"
path = "examples/passthrough.rs"
[[example]]
name = "triangle_wave_tx"
path = "examples/triangle_wave_tx.rs"
[[example]]
name = "blinky"
path = "examples/blinky.rs"
[[example]]
name = "sdram"
path = "examples/sdram.rs"
[[example]]
name = "flash"
path = "examples/flash.rs"
[[example]]
name = "usb_serial"
path = "examples/usb_serial.rs"
[[example]]
name = "looper"
path = "examples/looper.rs"
[[example]]
name = "usb_uac"
path = "examples/_usb_uac.rs"
[[example]]
name = "_minimum_sai"
path = "examples/_minimum_sai.rs"
[[example]]
name = "_minimum_flash"
path = "examples/_minimum_flash.rs"

[[test]]
name = "test"
harness = false